--- a/dissertation/bib.bib
+++ b/dissertation/bib.bib
@@ -1,455 +1,347 @@
-@Misc{JChoco,
-title = {{CHOCO Solver}},
-howpublished = {http://www.emn.fr/x-info/choco-solver/}
+@Misc{sasvi,
+    title = {{SAS Visual Investigator}},
+    howpublished = "https://www.sas.com/en\_gb/software/intelligence-analytics-visual-investigator.html",
+    author={SAS},
+    note="Last accessed: 4th March 2017"
 }
 
-@Misc{DIMACS,
-title = {{DIMACS clique benchmark instances}},
-howpublished = {ftp://dimacs.rutgers.edu/pub/challenge/graph/benchmarks/clique}
+@Misc{sas,
+    title = {{Analytics, Business Intelligence and Data Management - SAS UK}},
+    howpublished = "https://www.sas.com/en\_gb/home.html",
+    author={SAS},
+    note="Last accessed: 4th March 2017"
 }
 
-@article{bollobasErdos,
-   author    = {B. Bollob\'{a}s and P. Erd\"{o}s},
-   title     = {{Cliques in random graphs}},
-   journal   = {Mathematical Proceedings of the Cambridge Philosophical Society},
-   year      = {1976},
-   volume    = {80},
-   pages     = {419-427}
+@article{chen2005top,
+  title={Top 10 unsolved information visualization problems},
+  author={Chen, Chaomei},
+  journal={IEEE computer graphics and applications},
+  volume={25},
+  number={4},
+  pages={12--16},
+  year={2005},
+  publisher={IEEE}
+}
+// link=http://ieeexplore.ieee.org/document/1463074/#full-text-section
+// text="A prolonged lack of low-cost, ready-to-use, and reconfigurable information visualization systems" will have an adverse impact on cultivating the critical user population.
+// TODO:not_used text="The lack of quantifiable measures of quality and bench marks, however, will undermine information visualization advances, especially their evaluation and selection."
+
+@article{csardi2006igraph,
+  title={The igraph software package for complex network research},
+  author={Csardi, Gabor and Nepusz, Tamas},
+  journal={InterJournal, Complex Systems},
+  volume={1695},
+  number={5},
+  pages={1--9},
+  year={2006}
+}
+// link=http://www.necsi.edu/events/iccs6/papers/c1602a3c126ba822d0bc4293371c.pdf
+// text="lack of network analysis software which (1) can handle large graphs efficiently, (2) can be embedded into a higher level program or programming language (like Python, Perl or GNU R)"
+
+@Misc{sasdv,
+    title = {{SAS Data Visualisation}},
+    author={SAS},
+    howpublished = "http://www.sas.com/en\_us/insights/big-data/data-visualization.html",
+    note="Last accessed: 4th March 2017"
+}
+// text="the presentation of data in a pictorial or graphical format [which] enables decision makers to see analytics presented visually, so they can grasp difficult concepts or identify new patterns."
+
+@article{theus2002interactive,
+  title={Interactive data visualization using Mondrian},
+  author={Theus, Martin and others},
+  journal={Journal of Statistical Software},
+  volume={7},
+  number={11},
+  pages={1--9},
+  year={2002},
+  publisher={American Statistical Association}
+}
+// link=https://core.ac.uk/download/pdf/6305034.pdf
+// text="Interactive statistical data visualization is a powerful tool which reaches beyond the limits of static graphs"
+
+@Misc{flowingdata,
+    title = {{Why network visualization is useful}},
+    author={Nathan Yau},
+    howpublished = "https://flowingdata.com/2010/11/17/why-network-visualization-is-useful/",
+    note="Last accessed: 4th March 2017"
+}
+// text="identify nodes with the most links, nodes straddling different subgroups, and nodes isolated by their lack of connections"
+
+@article{batagelj1998pajek,
+  title={Pajek-program for large network analysis},
+  author={Batagelj, Vladimir and Mrvar, Andrej},
+  journal={Connections},
+  volume={21},
+  number={2},
+  pages={47--57},
+  year={1998}
 }
 
-@Misc{matula,
-author = {David W. Matula},
-title = {{The Largest Clique Size in a Random Graph}},
-howpublished = {Technical Report CS 7608, Department of Computer Science, Southern Methodist University, Dallas, Texas 75275},
-pages = {1-23},
-year = 1976
+@book{abello2013handbook,
+  title={Handbook of massive data sets},
+  author={Abello, James and Pardalos, Panos M and Resende, Mauricio GC},
+  volume={4},
+  year={2013},
+  publisher={Springer},
+  page={360}
+}
+// link=https://books.google.co.uk/books?hl=en&lr=&id=NfcGCAAAQBAJ&oi=fnd&pg=PA3&dq=Handbook+of+massive+data+sets&ots=9mY8JuUyo0&sig=iMVL3dJIYdOQckxtG65VDNcK9D8#v=onepage
+// text="data sets are often too massive to fit completely inside the computer's internal memory"
+
+@article{hashem2015rise,
+  title={The rise of “big data” on cloud computing: Review and open research issues},
+  author={Hashem, Ibrahim Abaker Targio and Yaqoob, Ibrar and Anuar, Nor Badrul and Mokhtar, Salimah and Gani, Abdullah and Khan, Samee Ullah},
+  journal={Information Systems},
+  volume={47},
+  pages={98--115},
+  year={2015},
+  publisher={Elsevier}
 }
 
-@article{Haralick80,
-   author    = {Haralick, R. M. and Elliot, G. L.},
-   title     = {{Increasing tree search efficiency for constraint
-       satisfaction problems}},
-   journal   = {Artificial Intelligence},
-   year      = {1980},
-   volume    = {14},
-   pages     = {263--314}
+@inproceedings{li2015modulgraph,
+  title={ModulGraph: modularity-based visualization of massive graphs},
+  author={Li, Chenhui and Baciu, George and Wang, Yunzhe},
+  booktitle={SIGGRAPH Asia 2015 Visualization in High Performance Computing},
+  pages={11},
+  year={2015},
+  organization={ACM}
+}
+// link=https://dl.acm.org/citation.cfm?id=2818542
+// text="This particular example display the comparison between the common graph visualization and ModulGraph-based graph visualization."
+
+@article{hu2015visualizing,
+  title={Visualizing large graphs},
+  author={Hu, Yifan and Shi, Lei},
+  journal={Wiley Interdisciplinary Reviews: Computational Statistics},
+  volume={7},
+  number={2},
+  pages={115--136},
+  year={2015},
+  publisher={Wiley Online Library}
+}
+// link=http://onlinelibrary.wiley.com/doi/10.1002/wics.1343/full
+
+@inproceedings{tominski2006fisheye,
+  title={Fisheye tree views and lenses for graph visualization},
+  author={Tominski, Christian and Abello, James and Van Ham, Frank and Schumann, Heidrun},
+  booktitle={Information Visualization, 2006. IV 2006. Tenth International Conference on},
+  pages={17--24},
+  year={2006},
+  organization={IEEE}
+}
+// link=http://ieeexplore.ieee.org/abstract/document/1648236/
+
+@inproceedings{hurter2012graph,
+  title={Graph bundling by kernel density estimation},
+  author={Hurter, Christophe and Ersoy, Ozan and Telea, Alexandru},
+  booktitle={Computer Graphics Forum},
+  volume={31},
+  pages={865--874},
+  year={2012},
+  organization={Wiley Online Library}
+}
+// link="http://onlinelibrary.wiley.com/doi/10.1111/j.1467-8659.2012.03079.x/full"
+
+@incollection{six2003effective,
+  title={Effective graph visualization via node grouping},
+  author={Six, Janet M and Tollis, Ioannis G},
+  booktitle={Software Visualization},
+  pages={413--437},
+  year={2003},
+  publisher={Springer}
+}
+//link=http://link.springer.com/chapter/10.1007/978-1-4615-0457-3_14
+
+@Misc{guess,
+    title = {{GUESS - The Graph Exploration System}},
+    howpublished = "http://graphexploration.cond.org/",
+    author={GUESS},
+    note="Last accessed: 4th March 2017"
 }
 
-@inproceedings{fahle,
-    author = {Torsten Fahle},
-    title = {{Simple and Fast: Improving a Branch-and-Bound Algorithm for Maximum Clique}},
-    booktitle = {Proceedings {ESA 2002}, LNCS 2461},
-    pages = {485-498},
-    year = 2002
+@Misc{snap,
+    title = {{Snap.py - SNAP for Python}},
+    howpublished = "https://snap.stanford.edu/snappy/",
+    author={SNAP},
+    note="Last accessed: 4th March 2017"
 }
 
-@inproceedings{regin2003,
-    author = {Jean-Charles R\'{e}gin},
-    title = {{Using Constraint Programming to Solve the Maximum Clique Problem}},
-    booktitle = {Proceedings {CP 2003}, LNCS 2833},
-    pages = {634-648},
-    year = 2003
+@Misc{gephi,
+    title = {{Gephi - The Open Graph Viz Platform}},
+    howpublished = "https://gephi.org/",
+    author={Gephi},
+    note="Last accessed: 4th March 2017"
 }
 
-@article{brelaz,
-author = "Daniel Br\'{e}laz",
-title = {{New Methods to Color the Vertices of a Graph}},
-journal = "Communications of the ACM",
-volume = 22,
-number = 4,
-pages = {251-256}, 
-year = 1979} 
-
-@article{welshPowell,
-author = "D.J.A. Welsh and M.B. Powell",
-title = {{An upper bound for the chromatic number of a graph and its application to timetabling problems}},
-journal = "The Computer Journal",
-volume = 10,
-number = 1,
-pages = {85-86}, 
-year = 1967} 
-
-@article{matulaBeck,
-author = "David W. Matula and Lelan L. Beck",
-title = {{Smallest-Last Ordering and Clustering and Graph Coloring Algorithms}},
-journal ="Journal of the Association for Computing Machinery",
-volume = 30,
-number = 3,
-pages = {417-427}, 
-year = 1983} 
-
-@article{freuder,
-author = "Eugene C. Freuder",
-title = {{A Sufficient Condition for Backtrack-Free Search}},
-journal ="Journal of the Association for Computing Machinery",
-volume = 29,
-number = 1,
-pages = {24-32}, 
-year = 1982} 
-
-@article{wood97,
-author = "David R. Wood",
-title = {{An algorithm for finding a maximum clique in a graph}},
-journal = "Operations Research Letters",
-volume = 21,
-pages = {211-217}, 
-year = 1997} 
-
-@article{carraghanPardalos90,
-author = "Randy Carraghan and Panos M. Pardalos",
-title = {{An exact algorithm for the maximum clique problem}},
-journal = "Operations Research Letters",
-volume = 9,
-pages = {375-382}, 
-year = 1990} 
-
-@article{pardalosRodgers92,
-author = "Panos M. Pardalos and Gregory P. Rodgers",
-title = {{A Branch and Bound Algorithm for the Maximum Clique Problem}},
-journal = "Computers and Operations Research",
-volume = 19,
-pages = {363-375}, 
-year = 1992} 
-
-@inproceedings{geelen,
-    author = {P. A. Geelen},
-    title = {{Dual viewpoint heuristics for binary constraint satisfaction problems}},
-    booktitle = {Proceedings {ECAI'92}},
-    year = 1992
+@Misc{graphviz,
+    title = {{Graphviz - Graph Visualization Software}},
+    howpublished = "http://www.graphviz.org/",
+    author={GraphViz},
+    note="Last accessed: 4th March 2017"
 }
 
-@book{gareyJohnson,
-author = {M.R. Garey and D.S. Johnson},
-title = {Computers and Intractability},
-publisher = {W.H. Freeman and Co},
-year = 1979}
-
-@book{nilsson,
-author = {Nils J. Nilsson},
-title = {Principles of Artificial Intelligence},
-publisher = {Springer-Verlag},
-year = 1982}
-
-@inproceedings{ckt, 
-  author = {Peter Cheeseman and Bob Kanefsky and William M. Taylor},  
-  year = 1991,
-  title = {{Where the really hard problems are}},
-  pages = "331-337",
-  booktitle = {Proceedings {IJCAI'91}}
+@Misc{tulip,
+    title = {{Tulip - Data Visualization Software}},
+    howpublished = "http://tulip.labri.fr/TulipDrupal/",
+    author={Tulip},
+    note="Last accessed: 4th March 2017"
 }
 
-@inproceedings{kappa, 
-  author = {Ian P. Gent and Ewan MacIntyre and Patrick Prosser and Toby Walsh},  
-  year = 1996,
-  title = {{The constrainednss of search}},
-  pages = "246-252",
-  booktitle = {Proceedings {AAAI'96}}
+@Misc{d3,
+    title = {{D3 - Data-Driven Documents}},
+    howpublished = "https://d3js.org/",
+    author={D3.js}
 }
 
-
-@article{am97,
-author = "Brian Hayes",
-title = "Can't get no satisfaction",
-journal = "American Scientist",
-volume = 85,
-pages = "108-112", 
-year = 1997}
-
-@article{vardi,
-   author    = {C. Coarfa and D.D. Demopoulos and A.S.M. Aguirre and D. Subramanian and M.Y. Vardi},
-   title     = {{Random 3-SAT: The Plot Thickens}},
-   journal   = {Constraints},
-   year      = {2003},
-   volume    = {8},
-   pages     = {243--261}
+@Misc{vis,
+    title = {{vis.js - A dynamic, browser based visualization library.}},
+    howpublished = "http://visjs.org/",
+    author={Vis.js}
 }
 
-
-@article{physicaA,
-   author    = {K.A. Zweig and G Palla and T. Vicsek},
-   title     = {{What makes a phase transition? Analysis of the random satisfiability problem}},
-   journal   = {Physica A},
-   year      = {2010},
-   volume    = {389},
-   pages     = {1501-1511}
+@Misc{tuliptlp,
+    title = {{Tulip software graph format (TLP)}},
+    howpublished = "http://tulip.labri.fr/TulipDrupal/?q=tlp-file-format",
+    author={Tulip},
+    note="Last accessed: 4th March 2017"
 }
 
-@conference{San09,
-author = "Peter Sanders",
-booktitle = "Efficient Algorithms",
-pages = "321--340",
-publisher = "Springer",
-series = "Lecture Notes in Computer Science",
-title = "{A}lgorithm {E}ngineering -- {A}n {A}ttempt at a {D}efinition",
-url = "http://algo2.iti.kit.edu/1577.php",
-volume = "5760",
-year = "2009",
+@Misc{tulipcppapi,
+    title = {{Welcome to Tulip's documentation.}},
+    howpublished = "http://tulip.labri.fr/Documentation/current/doxygen/html/index.html",
+    author={Tulip},
+    note="Last accessed: 4th March 2017"
 }
 
-@article{maxClique,
-   author    = {Panos M. Pardalos and Jue Xue},
-   title     = {{The Maximum Clique Problem}},
-   journal   = {Journal of Global Optimization},
-   year      = {1994},
-   volume    = {4},
-   pages     = {301-324}
+@Misc{tulippyapi,
+    title = {{Welcome to Tulip Python documentation!}},
+    howpublished = "http://tulip.labri.fr/Documentation/current/tulip-python/html/index.html",
+    author={Tulip},
+    note="Last accessed: 4th March 2017"
 }
 
-@article{heuristics,
-   author    = {Bahram Alidaee and Gary Kochenberger and Haibo Wang},
-   title     = {{Simple and fast surrogate constraint heuristics for maximum independent set problem}},
-   journal   = {Journal of Heuristics},
-   year      = {2008},
-   volume    = {14},
-   pages     = {571-585}
+@Misc{tulipfirefox,
+    title = {{Tulip vs Firefox Dataset}},
+    howpublished = "http://tulip.labri.fr/TulipDrupal/?q=node/1021",
+    author={Tulip},
+    note="Last accessed: 7th March 2017"
 }
 
-@book{algDesign,
-   author    = {Steven S. Skiena},
-   title     = {{The Algorithm Design Manual}},
-   publisher = {Springer},
-   year      = {2008}
+@book{zelle2004python,
+  title={Python programming: an introduction to computer science},
+  author={Zelle, John M},
+  year={2004},
+  publisher={Franklin, Beedle \& Associates, Inc.},
+  page=x
+}
+// link=https://books.google.co.uk/books?hl=en&lr=&id=aJQILlLxRmAC&oi=fnd&pg=PR9&dq=very+flexible+python+programming&ots=CAbNCBPb2J&sig=3hRTtMNgAhTcJXQoUcSPmOpDDrc#v=onepage
+// text="Python is very flexible and makes experimentation easy"
+
+@Misc{django,
+    title = {{The web framework for perfectionists with deadlines.}},
+    howpublished = "https://www.djangoproject.com/",
+    author={Django},
+    note="Last accessed: 5th March 2017"
 }
 
-@inproceedings{cp10wshop, 
-  author = {Patrick Prosser},  
-  year = 2010,
-  title = {{Triangle Packing with Constraint Programming}},
-  pages = "1-15",
-  booktitle = {{9th International Workshop on Constraint Modelling and Reformulation (ModRef 2010)}}}
+@book{forcier2008python,
+  title={Python web development with Django},
+  author={Forcier, Jeff and Bissex, Paul and Chun, Wesley J},
+  year={2008},
+  publisher={Addison-Wesley Professional}
 }
 
-@article{segundo2011,
-   author    = {Pablo San Segundo and Diego Rodr\'{i}guez-Losada and August\'{i}n Jim\'{e}nez},
-   title     = {{An exact bit-parallel algorithm for the maximum clique problem}},
-   journal   = {Computers and Operations Research},
-   year      = {2011},
-   volume    = {38},
-   pages     = {571-581}
+@Misc{amazons3,
+    title = {{Simple Storage Service}},
+    howpublished = "https://aws.amazon.com/s3/",
+    author={Amazon},
+    note="Last accessed: 5th March 2017"
 }
 
-@article{segundo2011b,
-   author    = {Pablo San Segundo and Fernando Matia and Diego Rodr\'{i}guez-Losada and Miguel Hernando},
-   title     = {{An improved bit parallel exact maximum clique algorithm}},
-   journal   = {Optimization Letters},
-   year      = {2011}
+@Misc{msftazure,
+    title = {{Azure Storage, Secure Cloud Storage | Microsoft Azure}},
+    howpublished = "https://azure.microsoft.com/en-gb/services/storage/",
+    author={Microsoft},
+    note="Last accessed: 7th March 2017"
 }
 
-@inproceedings{cp96, 
-  author = {Ian P. Gent and Ewan MacIntyre and Patrick Prosser and Barbara M. Smith and Toby Walsh},  
-  year = 1996,
-  title = {{An Empirical Study of Dynamic Variable Ordering Heuristics for the Constraint satisfaction Problem}},
-  pages = "179-193",
-  booktitle = {Proceedings {CP 1996}}
+@Misc{hadoop,
+    title = {{Welcome to Apache Hadoop!}},
+    howpublished = "https://hadoop.apache.org/",
+    author={Apache},
+    note="Last accessed: 7th March 2017"
 }
 
-@article{golomb65,
-  author    = {Solomon W. Golomb and
-               Leonard D. Baumert},
-  title     = {Backtrack Programming},
-  journal   = {J. ACM},
-  volume    = {12},
-  number    = {4},
-  year      = {1965},
-  pages     = {516-524}
+@Misc{moscowreq,
+    title = {{MoSCoW Prioritisation}},
+    howpublished = "https://www.agilebusiness.org/content/moscow-prioritisation-0",
+    author={Agile Business Consortium},
+    note="Last accessed: 5th March 2017"
 }
 
-@article{bk73,
-author = {Coen Bron and Joep Kerbosch},
-title = {Algorithm 457: Finding All Cliques of an Undirected Graph [H]},
-journal = "Communications of the ACM",
-volume = 16,
-number = 9,
-pages = "575-579", 
-year = 1973}
-
-@article{prjo2002,
-author = {Patric R. J. \"{O}sterg\aa{}rd},
-title = {A fast algorithm for the maximum clique problem},
-journal = "Discrete Applied Mathematics",
-volume = 120,
-pages = "197-207", 
-year = 2002}
-
-@inproceedings{tomita2010,
-author = {E. Tomita and Y. Sutani and T. Higashi and S. Takahashi and M. Wakatsuki},
-title = {A Simple and Faster Branch-and-Bound Algorithm for Finding Maximum Clique},
-booktitle = {WALCOM 2010, LNCS 5942},
-pages = "191-203", 
-year = 2010}
-
-@article{tomita2007,
-author = {E. Tomita and Toshikatsu Kameda},
-title = {An efficient branch-and-bound algorithm for finding a maximum clique and computational experiments},
-journal = {Journal of Global Optimization},
-volume = 37,
-pages = "95-111",
-year = 2007}
-
-@article{tomita2006,
-author = {Etsuji Tomita and Akira Tanaka and Haruhisa Takahashi},
-title = {The worst-case time complexity for generating all maximal cliques and computational experiments},
-journal = {Theoretical Computer Science},
-volume = 363,
-pages = "28-42",
-year = 2006}
-
-@article{ci1993,
-  author    = {Patrick Prosser},
-  title     = {Hybrid Algorithms for the Constraint Satisfaction Problem},
-  journal   = {Computational Intelligence},
-  volume    = {9},
-  year      = {1993},
-  pages     = {268-299}
+@Misc{pip,
+    title = {{pip 9.0.1 : Python Package Index}},
+    howpublished = "https://pypi.python.org/pypi/pip",
+    author={Python Software Foundation},
+    note="Last accessed: 5th March 2017"
 }
 
-@inproceedings{cp1997,
-  author    = {Ian P. Gent and
-               Ewan MacIntyre and
-               Patrick Prosser and
-               Toby Walsh},
-  title     = {The Constrainedness of Arc Consistency},
-  booktitle = {CP},
-  year      = {1997},
-  pages     = {327-340}
+@Misc{tulippip,
+    title = {{tulip-python 4.10.0 : Python Package Index}},
+    howpublished = "https://pypi.python.org/pypi/tulip-python",
+    author={Python Software Foundation},
+    note="Last accessed: 5th March 2017"
 }
 
-@article{jair1993,
-  author    = {Matthew L. Ginsberg},
-  title     = {Dynamic Backtracking},
-  journal   = {Journal of Artificial Intelligence Research},
-  volume    = {1},
-  year      = {1993},
-  pages     = {25-46}
+@article{kamada1989algorithm,
+  title={An algorithm for drawing general undirected graphs},
+  author={Kamada, Tomihisa and Kawai, Satoru},
+  journal={Information processing letters},
+  volume={31},
+  number={1},
+  pages={7--15},
+  year={1989},
+  publisher={Elsevier}
 }
 
-@article{Konc_Janezic_2007,
-title={An improved branch and bound algorithm for the maximum clique problem}, 
-volume={58}, 
-journal={MATCH Communications in Mathematical and Computer Chemistry}, 
-author={Janez Konc and Du\u{s}anka Jane\u{z}i\u{c}}, 
-year={2007}, 
-pages={569--590}}
-
-@INPROCEEDINGS{aaai2010,
-AUTHOR = "Chu Min Li and Zhe Quan",
-TITLE = "An Efficient Branch-and-Bound Algorithm Based on MaxSAT for the Maximum Clique Problem.",
-booktitle = "AAAI'10",
-pages = {128-133},
-YEAR = {2010}  }
-
-@INPROCEEDINGS{tai2010,
-AUTHOR = "Chu Min Li and Zhe Quan",
-TITLE = "Combining Graph Structure Exploitation and Propositional Reasoning for the Maximum Clique Problem",
-booktitle = "Tools With Artificial Intelligence",
-pages = {344-351},
-YEAR = {2010}  }
-
-@inproceedings{tomita2003,
-author = {E. Tomita and Y. Sutani and T. Higashi and S. Takahashi and M. Wakatsuki},
-title = {An Efficient Branch-and-Bound Algorithm for Finding a Maximum Clique},
-booktitle = {DMTC 2003, LNCS 2731},
-pages = "278-289", 
-year = 2003}
-
-@inproceedings{eppstein2011,
-author = {David Eppstein and Darren Strash},
-title = {Listing All Maximal Cliques in Large Sparse Real-World Graphs},
-booktitle = {Experimental Algorithms, LNCS 6630},
-pages = "364-375", 
-year = 2011}
-
-@article{maffray1999,
-title={{Sequential colorings and perfect graphs}}, 
-volume={94}, 
-journal={Discrete Applied Mathematics}, 
-author={Fr\'{e}d\'{e}ric Maffray and Myriam Preissmann},
-year={1998}, 
-pages={287--296}}
-
-@book{cadenhead,
-author = {Rogers Cadenhead},
-title = {{Sams Teach Yourself Java in 24 Hours, edition 6}},
-publisher = {Sams},
-year = 2011}
-
-@article{qsort,
-author = {Jon L. Bentley and M. Douglas McIlroy},
-title = {{Engineering a Sort Function}},
-journal = {Software-Practice and Experience}, 
-volume = 23,
-number = 11,
-pages = {1249-1265},
-year = 1993}
-
-@article{sparseSet,
-title= {{An Efficient Representation for Sparse Sets}},
-author = {Preston Briggs and Linda Torczon},
-journal = {ACM Letters on Programming Languages and Systems},
-volume = 2,
-number = "1-4",
-pages = {59-69},
-year = 1993}
-
-@book{dek,
-author = {Donald E. Knuth},
-title = {The Art of Computer Programming, Volume 4, Fascicle 3: Generating all Combinations and Permutations},
-publisher = {Addison-Wesley},
-year = 2010}
-
-@article{carmoZuge,
-  author    = {Renato Carmo and
-               Alexandre P. Z{\"u}ge},
-  title     = {Branch and bound algorithms for the maximum clique problem
-               under a unified framework},
-  journal   = {J. Braz. Comp. Soc.},
-  volume    = {18},
-  number    = {2},
-  year      = {2012},
-  pages     = {137-151},
-  ee        = {http://dx.doi.org/10.1007/s13173-011-0050-6},
-  bibsource = {DBLP, http://dblp.uni-trier.de}
+@Misc{visjsoptions,
+    title = {{Network decumentation}},
+    howpublished = "http://visjs.org/docs/network/\#options",
+    author={Vis.js},
+    note="Last accessed: 7th March 2017"
 }
 
-@article{smallWorld,
-  author    = {Duncan J. Watts and Steven H. Strogatz},
-  title     = {Collective dynamics of small world networks},
-  journal   = {Nature},
-  volume    = {394},
-  year      = {1998},
-  pages     = {440-442}
+@Misc{visjslayout,
+    title = {{Layout decumentation}},
+    howpublished = "http://visjs.org/docs/network/layout.html",
+    author={Vis.js},
+    note="Last accessed: 7th March 2017"
 }
 
-@article{akk73,
-  author    = {E.A. Akkoyunlu},
-  title     = {The enumeration of maximal cliques of large graphs},
-  journal   = {SIAM Journal of Computing},
-  volume    = {2},
-  number    = 1,
-  year      = {1973},
-  pages     = {1-6}
-}
-@inproceedings{segundoT10,
-  author    = {Pablo San Segundo and
-               Crist{\'o}bal Tapia},
-  title     = {A New Implicit Branching Strategy for Exact Maximum Clique},
-  booktitle = {ICTAI (1)},
-  year      = {2010},
-  pages     = {352-357}
+@Misc{visjsphysics,
+    title = {{Physics decumentation}},
+    howpublished = "http://visjs.org/docs/network/physics.html",
+    author={Vis.js},
+    note="Last accessed: 7th March 2017"
 }
 
-@article{sewell98,
-  author    = {E. C. Sewell},
-  title     = {A Branch and Bound Algorithm for the Stability Number of
-               a Sparse Graph},
-  journal   = {INFORMS Journal on Computing},
-  volume    = {10},
-  number    = {4},
-  year      = {1998},
-  pages     = {438-447}
+@article{barnes1986hierarchical,
+  title={A hierarchical O (N log N) force-calculation algorithm},
+  author={Barnes, Josh and Hut, Piet},
+  journal={nature},
+  volume={324},
+  number={6096},
+  pages={446--449},
+  year={1986}
 }
 
-
-
-
-
+@article{jacomy2014forceatlas2,
+  title={ForceAtlas2, a continuous graph layout algorithm for handy network visualization designed for the Gephi software},
+  author={Jacomy, Mathieu and Venturini, Tommaso and Heymann, Sebastien and Bastian, Mathieu},
+  journal={PloS one},
+  volume={9},
+  number={6},
+  pages={e98679},
+  year={2014},
+  publisher={Public Library of Science}
+}
