--- a/dissertation/dissertation.tex
+++ b/dissertation/dissertation.tex
@@ -4,16 +4,56 @@
 \usepackage{hyperref}
 \usepackage{subfiles}
 \usepackage{graphicx}
+\usepackage{amssymb}
+\usepackage{pifont}
+\usepackage{listings}
+
+\usepackage{color}
+ 
+\definecolor{codegreen}{rgb}{0,0.6,0}
+\definecolor{codegray}{rgb}{0.5,0.5,0.5}
+\definecolor{codepurple}{rgb}{0.58,0,0.82}
+\definecolor{backcolour}{rgb}{0.95,0.95,0.92}
+
+\lstdefinestyle{diss_style}{
+    backgroundcolor=\color{backcolour},   
+    commentstyle=\color{codegreen},
+    keywordstyle=\color{magenta},
+    numberstyle=\tiny\color{codegray},
+    stringstyle=\color{codepurple},
+    basicstyle=\footnotesize,
+    breakatwhitespace=false,         
+    breaklines=true,                 
+    captionpos=b,                    
+    keepspaces=true,                 
+    numbers=left,                    
+    numbersep=5pt,                  
+    showspaces=false,                
+    showstringspaces=false,
+    showtabs=false,                  
+    tabsize=4,
+    framexleftmargin=16pt,
+    framextopmargin=6pt,
+    framexbottommargin=6pt, 
+    frame=tb, framerule=0pt,
+    aboveskip=18pt,belowskip=4pt
+}
+
+\lstset{style=diss_style}
+
 \graphicspath{ {images/} }
 \setlength\parindent{0pt}
+\newcommand{\tmark}{\ding{51}}
+\newcommand{\cmark}{\ding{55}}
 
 \begin{document}
 \title{Visualisation of Massive Networks in a Browser}
 \author{Benjamin Jackson}
-\date{February 26, 2017}
+\date{\today}
 \maketitle
 
-\subfile{sections/0-abstract.tex}
+\subfile{sections/00-abstract.tex}
+\subfile{sections/00-acknowledgements.tex}
 
 \educationalconsent
 
@@ -22,23 +62,18 @@
 \pagebreak
 \pagenumbering{arabic}
 
-\subfile{sections/1-introduction.tex}
+\subfile{sections/01-introduction.tex}
+\subfile{sections/02-motivation.tex}
+\subfile{sections/03-review.tex}
+\subfile{sections/04-research.tex}
+\subfile{sections/05-systematic-rev.tex}
+\subfile{sections/06-design.tex}
+\subfile{sections/07-implementation.tex}
+\subfile{sections/08-evaluation.tex}
+\subfile{sections/09-conclusion.tex}
+\subfile{sections/10-appendices.tex}
 
-\subfile{sections/2-motivation.tex}
-
-\subfile{sections/3-review.tex}
-
-\subfile{sections/4-research.tex}
-
-\subfile{sections/5-design.tex}
-
-\subfile{sections/6-implementation.tex}
-
-\subfile{sections/7-conclusion.tex}
-
-\subfile{sections/8-appendices.tex}
-
-\bibliographystyle{plain}
+\bibliographystyle{unsrt}
 \bibliography{bib}
 
 \end{document}
