More dissertation work

--- a/dissertation/bib.bib
+++ b/dissertation/bib.bib
@@ -1,13 +1,13 @@
-@Misc{sasvi,
-    title = {{SAS Visual Investigator}},
-    howpublished = "https://www.sas.com/en\_gb/software/intelligence-analytics-visual-investigator.html",
+@Misc{sas,
+    title = {{Analytics, Business Intelligence and Data Management}},
+    howpublished = "https://www.sas.com/en\_gb/home.html",
     author={SAS},
     note="Last accessed: 4th March 2017"
 }
 
-@Misc{sas,
-    title = {{Analytics, Business Intelligence and Data Management - SAS UK}},
-    howpublished = "https://www.sas.com/en\_gb/home.html",
+@Misc{sasvi,
+    title = {{Intelligence Analytics | SAS Visual Investigator}},
+    howpublished = "https://www.sas.com/en\_gb/software/intelligence-analytics-visual-investigator.html",
     author={SAS},
     note="Last accessed: 4th March 2017"
 }
@@ -208,7 +208,7 @@
 
 @Misc{tulipcppapi,
     title = {{Welcome to Tulip's documentation.}},
-    howpublished = "http://tulip.labri.fr/Documentation/current/doxygen/html/index.html",
+    howpublished = "http://tulip.labri.fr/Documentation/current/doxygen/html",
     author={Tulip},
     note="Last accessed: 4th March 2017"
 }
@@ -287,7 +287,7 @@
 }
 
 @Misc{tulippip,
-    title = {{tulip-python 4.10.0 : Python Package Index}},
+    title = {{tulip-python 4.10.0}},
     howpublished = "https://pypi.python.org/pypi/tulip-python",
     author={Python Software Foundation},
     note="Last accessed: 5th March 2017"
