--- a/dissertation/dissertation.tex
+++ b/dissertation/dissertation.tex
@@ -7,6 +7,7 @@
 \usepackage{amssymb}
 \usepackage{pifont}
 \usepackage{listings}
+\usepackage{subcaption}
 
 \usepackage{color}
  
@@ -34,9 +35,11 @@
     tabsize=4,
     framexleftmargin=16pt,
     framextopmargin=6pt,
-    framexbottommargin=6pt, 
-    frame=tb, framerule=0pt,
-    aboveskip=18pt,belowskip=4pt
+    framexbottommargin=6pt,
+    frame=tb,
+    framerule=0pt,
+    aboveskip=18pt,
+    belowskip=4pt
 }
 
 \lstset{style=diss_style}
