--- a/dissertation/sections/00-abstract.tex
+++ b/dissertation/sections/00-abstract.tex
@@ -1,10 +1,6 @@
 \documentclass[../dissertation.tex]{subfiles}
 \begin{abstract}
 
-TODO: Do at the end
-
-The purpose of this research is to identify different techniques that existing software uses to visualise extremely large networks in a browser, and then compare them and review which methods are the most successful. This is good because ??. I did it by doing ??. I found out ??. Conclusion.
-
-This project is about researching and implementing some way for networks of hundreds of thousands of nodes and millions of edges to be viewed by a user in a browser. This involves challenges such as getting over the issues such as bandwidth, processing power and memory for machines running on a network, along with the difficulty of actually visualising the network after it is rendered.
+Visualising massive networks in a browser causes both developers and users numerous difficulties. Challenges are the high amount of bandwidth and  computational power required to render a massive network, along with the difficulty of getting useful information from the network after it is displayed. After completing background research into the field, a systematic review of existing software was conducted, and a network visualisation system was designed and implemented. Finally, the system was evaluated and successfully confirmed techniques to improve performance and network visualisability.
 
 \end{abstract}
