--- a/dissertation/sections/01-introduction.tex
+++ b/dissertation/sections/01-introduction.tex
@@ -4,12 +4,10 @@
 
 \chapter{Introduction}
 
-TODO: At the end
+Rendering massive networks (upwards of thousands of nodes and edges) in a browser is a frequent problem encountered in visualisation software. This is due to limits in browser performance as well as the fact that rendering information in a clear and meaningful way for the user is so difficult. This dissertation aims to analyse many of different software packages available and outline different approaches which could be taken to help minimise the clutter and performance required to display these large networks. A network visualisation system is then designed, implemented and evaluated.
 
-Rendering massive networks (tens or hundreds of thousands of nodes and edges) in a browser is a frequent problem encountered in visualisation software due to limits in browser performance and the lack of ability to render the information in a meaningful way that the user can make sense of it. This dissertation aims to analyse many different software packages available and outline different approaches which can be taken to help minimize the clutter and performance required to display these large networks, and then to describe, analyse and evaluate a system created for the purpose of this project.
+There are two main barriers to easily visualising massive amounts of data. The first is the sheer amount of data that needs to be visualised by the client, which requires a lot of bandwidth, processing power and RAM. Secondly, once the data is finally rendered, the result is a mass of nodes and edges of which no useful information can be taken from. 
 
-There are several barriers to easily visualising massive amounts of information, including the huge amount of data that needs to be passed to the user from the server, requiring a lot of bandwidth, processing power and RAM, and, once the data is finally rendered, the result is a mass of nodes of which no useless information can be taken from. 
-
-A successful outcome of the project would be a system where, instead of the data being passed straight to the client that is to be visualised, that data is analysed, and a modified and reduced version of the data is sent to the client. This could be done by: sending an image to the client; removing unnecessary nodes/edges; or node bundling/edge bundling. This would result in the information being far more useful to the client, with them being able to make informed decisions based on the network presented to them, as opposed to before where they were shown a huge mass of nodes that could not be easily deciphered. This would also reduce the loading times of the network, resulting in networks displaying far faster, and less bandwidth and processing requirements on the client's side.
+A successful outcome of the project would be a system where, instead of data being passed straight to the client to be visualised, that data is analysed, modified, and a reduced version of the data is sent. This could possibly be done by: removing unnecessary nodes or edges, node bundling or edge bundling, or even by sending an image to the client. This would result in the data being far more useful to the user, with them being able to make informed decisions based on the network presented to them, as opposed to seeing an illegible mass of nodes. Additionally. this would reduce the processing required to render a network, resulting in lower loading times and bandwidth requirements.
 
 \end{document}
