--- a/dissertation/sections/05-systematic-rev.tex
+++ b/dissertation/sections/05-systematic-rev.tex
@@ -130,7 +130,7 @@ See Table \ref{table:massive-network} for details what features the software had
 
 See Table \ref{table:other_info} for details on how long it took to create a simple hardcoded network, whether the network visualisation software supported dynamic networks, if the software included graphical options, if networks were viewable in 3D and if a network could be multivariate.
 
-\begin{table}[h]
+\begin{table}[ht]
     \centering
     \begin{tabular}{|l|l|l|l|l|}
         \hline
@@ -145,7 +145,7 @@ See Table \ref{table:other_info} for details on how long it took to create a sim
     \label{table:render-times}
 \end{table}
 
-\begin{table}[h]
+\begin{table}[ht]
     \centering
     \begin{tabular}{|l|l|l|l|}
         \hline
@@ -160,7 +160,7 @@ See Table \ref{table:other_info} for details on how long it took to create a sim
     \label{table:documentation}
 \end{table}
 
-\begin{table}[h]
+\begin{table}[ht]
     \centering
     \begin{tabular}{|l|l|l|l|}
         \hline
@@ -175,7 +175,7 @@ See Table \ref{table:other_info} for details on how long it took to create a sim
     \label{table:massive-network}
 \end{table}
 
-\begin{table}[h]
+\begin{table}[ht]
     \centering
     \begin{tabular}{|l|l|l|l|l|l|}
         \hline
