--- a/dissertation/sections/10-appendices.tex
+++ b/dissertation/sections/10-appendices.tex
@@ -77,16 +77,6 @@ How to run everything.
 
 How to run everything.
 
-%----------------------------------
-
-\chapter{API Calls}
-
-\section{Tulip Web Wrapper Python Back-end}
-
-Call x to achieve y
-
-\section{JavaScript Library for Tulip Web Wrapper}
-
-Call x to achieve y
+% Should I have API calls?
 
 \end{appendices}
