--- a/dissertation/sections/09-conclusion.tex
+++ b/dissertation/sections/09-conclusion.tex
@@ -3,7 +3,7 @@
 
 \chapter{Conclusion}
 
-Main conclusion body
+This project aimed to research how existing software visualised networks, do a systematic review of existing network visualisation software, and design, implement and evaluate software that could visualise networks in a browser. 
 
 \section{Recommendations}
 
